# name: TestCreate.test_name_exists[/samples][json]
  <class 'dict'> {
    'id': 'bad_request',
    'message': 'Sample name is already in use',
  }
---
# name: TestCreate.test_name_exists[/spaces/0/samples][json]
  <class 'dict'> {
    'id': 'bad_request',
    'message': 'Sample name is already in use',
  }
---
# name: TestCreate.test_ok[force_choice][location]
  '/samples/fb085f7f'
---
# name: TestCreate.test_ok[force_choice][mongo]
  <class 'dict'> {
    '_id': 'fb085f7f',
    'all_read': True,
    'all_write': True,
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'format': 'fastq',
    'group': '7cf872dc',
    'group_read': True,
    'group_write': True,
    'hold': True,
    'host': '',
    'is_legacy': False,
    'isolate': '',
    'job': <class 'dict'> {
      'id': 'bf1b993c',
    },
    'labels': <class 'list'> [
      1,
    ],
    'library_type': 'normal',
    'locale': '',
    'name': 'Foobar',
    'notes': '',
    'nuvs': False,
    'paired': False,
    'pathoscope': False,
    'quality': None,
    'ready': False,
    'results': None,
    'space': <class 'dict'> {
      'id': 0,
    },
    'subtractions': <class 'list'> [
      'apple',
    ],
    'user': <class 'dict'> {
      'id': 'fb085f7f',
    },
    'workflows': <class 'dict'> {
      'aodp': 'incompatible',
      'nuvs': 'none',
      'pathoscope': 'none',
    },
  }
---
# name: TestCreate.test_ok[force_choice][resp]
  <class 'dict'> {
    'all_read': True,
    'all_write': True,
    'artifacts': <class 'list'> [
    ],
    'caches': <class 'list'> [
    ],
    'created_at': '2015-10-06T20:00:00Z',
    'format': 'fastq',
    'group': '7cf872dc',
    'group_read': True,
    'group_write': True,
    'hold': True,
    'host': '',
    'id': 'fb085f7f',
    'is_legacy': False,
    'isolate': '',
    'job': <class 'dict'> {
      'archived': False,
      'created_at': '2015-10-06T20:00:00Z',
      'id': 'bf1b993c',
      'progress': 0,
      'stage': None,
      'state': 'waiting',
      'user': <class 'dict'> {
        'administrator': False,
        'handle': 'bob',
        'id': 'fb085f7f',
      },
      'workflow': 'create_sample',
    },
    'labels': <class 'list'> [
      <class 'dict'> {
        'color': '#ab2213',
        'description': 'A huge three.',
        'id': 1,
        'name': 'Use',
      },
    ],
    'library_type': 'normal',
    'locale': '',
    'name': 'Foobar',
    'notes': '',
    'nuvs': False,
    'paired': False,
    'pathoscope': False,
    'quality': None,
    'reads': <class 'list'> [
    ],
    'ready': False,
    'subtractions': <class 'list'> [
      <class 'dict'> {
        'id': 'apple',
        'name': 'Apple',
      },
    ],
    'user': <class 'dict'> {
      'administrator': False,
      'handle': 'bob',
      'id': 'fb085f7f',
    },
    'workflows': <class 'dict'> {
      'aodp': 'incompatible',
      'nuvs': 'none',
      'pathoscope': 'none',
    },
  }
---
# name: TestCreate.test_ok[none][location]
  '/samples/fb085f7f'
---
# name: TestCreate.test_ok[none][mongo]
  <class 'dict'> {
    '_id': 'fb085f7f',
    'all_read': True,
    'all_write': True,
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'format': 'fastq',
    'group': 'none',
    'group_read': True,
    'group_write': True,
    'hold': True,
    'host': '',
    'is_legacy': False,
    'isolate': '',
    'job': <class 'dict'> {
      'id': 'bf1b993c',
    },
    'labels': <class 'list'> [
      1,
    ],
    'library_type': 'normal',
    'locale': '',
    'name': 'Foobar',
    'notes': '',
    'nuvs': False,
    'paired': False,
    'pathoscope': False,
    'quality': None,
    'ready': False,
    'results': None,
    'space': <class 'dict'> {
      'id': 0,
    },
    'subtractions': <class 'list'> [
      'apple',
    ],
    'user': <class 'dict'> {
      'id': 'fb085f7f',
    },
    'workflows': <class 'dict'> {
      'aodp': 'incompatible',
      'nuvs': 'none',
      'pathoscope': 'none',
    },
  }
---
# name: TestCreate.test_ok[none][resp]
  <class 'dict'> {
    'all_read': True,
    'all_write': True,
    'artifacts': <class 'list'> [
    ],
    'caches': <class 'list'> [
    ],
    'created_at': '2015-10-06T20:00:00Z',
    'format': 'fastq',
    'group': 'none',
    'group_read': True,
    'group_write': True,
    'hold': True,
    'host': '',
    'id': 'fb085f7f',
    'is_legacy': False,
    'isolate': '',
    'job': <class 'dict'> {
      'archived': False,
      'created_at': '2015-10-06T20:00:00Z',
      'id': 'bf1b993c',
      'progress': 0,
      'stage': None,
      'state': 'waiting',
      'user': <class 'dict'> {
        'administrator': False,
        'handle': 'bob',
        'id': 'fb085f7f',
      },
      'workflow': 'create_sample',
    },
    'labels': <class 'list'> [
      <class 'dict'> {
        'color': '#ab2213',
        'description': 'A huge three.',
        'id': 1,
        'name': 'Use',
      },
    ],
    'library_type': 'normal',
    'locale': '',
    'name': 'Foobar',
    'notes': '',
    'nuvs': False,
    'paired': False,
    'pathoscope': False,
    'quality': None,
    'reads': <class 'list'> [
    ],
    'ready': False,
    'subtractions': <class 'list'> [
      <class 'dict'> {
        'id': 'apple',
        'name': 'Apple',
      },
    ],
    'user': <class 'dict'> {
      'administrator': False,
      'handle': 'bob',
      'id': 'fb085f7f',
    },
    'workflows': <class 'dict'> {
      'aodp': 'incompatible',
      'nuvs': 'none',
      'pathoscope': 'none',
    },
  }
---
# name: TestCreate.test_ok[users_primary_group][location]
  '/samples/fb085f7f'
---
# name: TestCreate.test_ok[users_primary_group][mongo]
  <class 'dict'> {
    '_id': 'fb085f7f',
    'all_read': True,
    'all_write': True,
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'format': 'fastq',
    'group': '7cf872dc',
    'group_read': True,
    'group_write': True,
    'hold': True,
    'host': '',
    'is_legacy': False,
    'isolate': '',
    'job': <class 'dict'> {
      'id': 'bf1b993c',
    },
    'labels': <class 'list'> [
      1,
    ],
    'library_type': 'normal',
    'locale': '',
    'name': 'Foobar',
    'notes': '',
    'nuvs': False,
    'paired': False,
    'pathoscope': False,
    'quality': None,
    'ready': False,
    'results': None,
    'space': <class 'dict'> {
      'id': 0,
    },
    'subtractions': <class 'list'> [
      'apple',
    ],
    'user': <class 'dict'> {
      'id': 'fb085f7f',
    },
    'workflows': <class 'dict'> {
      'aodp': 'incompatible',
      'nuvs': 'none',
      'pathoscope': 'none',
    },
  }
---
# name: TestCreate.test_ok[users_primary_group][resp]
  <class 'dict'> {
    'all_read': True,
    'all_write': True,
    'artifacts': <class 'list'> [
    ],
    'caches': <class 'list'> [
    ],
    'created_at': '2015-10-06T20:00:00Z',
    'format': 'fastq',
    'group': '7cf872dc',
    'group_read': True,
    'group_write': True,
    'hold': True,
    'host': '',
    'id': 'fb085f7f',
    'is_legacy': False,
    'isolate': '',
    'job': <class 'dict'> {
      'archived': False,
      'created_at': '2015-10-06T20:00:00Z',
      'id': 'bf1b993c',
      'progress': 0,
      'stage': None,
      'state': 'waiting',
      'user': <class 'dict'> {
        'administrator': False,
        'handle': 'bob',
        'id': 'fb085f7f',
      },
      'workflow': 'create_sample',
    },
    'labels': <class 'list'> [
      <class 'dict'> {
        'color': '#ab2213',
        'description': 'A huge three.',
        'id': 1,
        'name': 'Use',
      },
    ],
    'library_type': 'normal',
    'locale': '',
    'name': 'Foobar',
    'notes': '',
    'nuvs': False,
    'paired': False,
    'pathoscope': False,
    'quality': None,
    'reads': <class 'list'> [
    ],
    'ready': False,
    'subtractions': <class 'list'> [
      <class 'dict'> {
        'id': 'apple',
        'name': 'Apple',
      },
    ],
    'user': <class 'dict'> {
      'administrator': False,
      'handle': 'bob',
      'id': 'fb085f7f',
    },
    'workflows': <class 'dict'> {
      'aodp': 'incompatible',
      'nuvs': 'none',
      'pathoscope': 'none',
    },
  }
---
# name: TestEdit.test_label_exists[json]
  <class 'dict'> {
    'id': 'bad_request',
    'message': 'Labels do not exist: [1]',
  }
---
# name: TestEdit.test_ok
  <class 'dict'> {
    'all_read': True,
    'all_write': True,
    'artifacts': <class 'list'> [
      <class 'dict'> {
        'download_url': '/samples/test/artifacts/reference.fa.gz',
        'id': 1,
        'name': 'reference.fa.gz',
        'name_on_disk': 'reference.fa.gz',
        'sample': 'test',
        'size': None,
        'type': 'fasta',
        'uploaded_at': None,
      },
    ],
    'caches': <class 'list'> [
    ],
    'created_at': '2015-10-06T20:00:00Z',
    'format': 'fastq',
    'group': 'none',
    'group_read': True,
    'group_write': True,
    'hold': False,
    'host': '',
    'id': 'test',
    'is_legacy': False,
    'isolate': '',
    'job': None,
    'labels': <class 'list'> [
      <class 'dict'> {
        'color': '#629f70',
        'description': 'American whole magazine truth stop whose.',
        'id': 1,
        'name': 'Three',
      },
    ],
    'library_type': 'normal',
    'locale': '',
    'name': 'test_sample',
    'notes': 'This is a test.',
    'nuvs': False,
    'paired': False,
    'pathoscope': True,
    'quality': None,
    'reads': <class 'list'> [
      <class 'dict'> {
        'download_url': '/samples/test/reads/reads_1.fq.gz',
        'id': 1,
        'name': 'reads_1.fq.gz',
        'name_on_disk': 'reads_1.fq.gz',
        'sample': 'test',
        'size': 2903109210,
        'upload': None,
        'uploaded_at': '2015-10-06T20:00:00Z',
      },
    ],
    'ready': True,
    'subtractions': <class 'list'> [
      <class 'dict'> {
        'id': 'peach',
        'name': 'Peach',
      },
    ],
    'user': <class 'dict'> {
      'administrator': False,
      'handle': 'kellylopez',
      'id': 'bf1b993c',
    },
    'workflows': <class 'dict'> {
      'aodp': 'incompatible',
      'nuvs': 'pending',
      'pathoscope': 'complete',
    },
  }
---
# name: TestEdit.test_subtraction_exists[json]
  <class 'dict'> {
    'id': 'bad_request',
    'message': 'Subtractions do not exist: bar',
  }
---
# name: TestFindSamples.test_labels[None]
  <class 'dict'> {
    'documents': <class 'list'> [
      <class 'dict'> {
        'created_at': '2015-10-06T22:00:00Z',
        'host': '',
        'id': 'cb400e6d',
        'isolate': '',
        'job': None,
        'labels': <class 'list'> [
          <class 'dict'> {
            'color': '#47e7f6',
            'description': 'Drive well good explain.',
            'id': 3,
            'name': 'Off',
          },
        ],
        'library_type': 'amplicon',
        'name': '16SPP044',
        'notes': '',
        'nuvs': False,
        'pathoscope': False,
        'ready': True,
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'zclark',
          'id': 'fb085f7f',
        },
        'workflows': <class 'dict'> {
          'aodp': 'none',
          'nuvs': 'none',
          'pathoscope': 'none',
        },
      },
      <class 'dict'> {
        'created_at': '2015-10-06T21:00:00Z',
        'host': '',
        'id': 'beb1eb10',
        'isolate': 'Thing',
        'job': None,
        'labels': <class 'list'> [
          <class 'dict'> {
            'color': '#ae686a',
            'description': 'Tonight themselves true power home price.',
            'id': 1,
            'name': 'Market',
          },
          <class 'dict'> {
            'color': '#8f837f',
            'description': 'Leader bad school.',
            'id': 2,
            'name': 'Class',
          },
        ],
        'library_type': 'normal',
        'name': '16GVP042',
        'notes': '',
        'nuvs': True,
        'pathoscope': True,
        'ready': True,
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'leeashley',
          'id': 'bf1b993c',
        },
        'workflows': <class 'dict'> {
          'aodp': 'none',
          'nuvs': 'none',
          'pathoscope': 'none',
        },
      },
      <class 'dict'> {
        'created_at': '2015-10-06T20:00:00Z',
        'host': '',
        'id': '72bb8b31',
        'isolate': 'Test',
        'job': None,
        'labels': <class 'list'> [
          <class 'dict'> {
            'color': '#ae686a',
            'description': 'Tonight themselves true power home price.',
            'id': 1,
            'name': 'Market',
          },
        ],
        'library_type': 'srna',
        'name': '16GVP043',
        'notes': 'This is a good sample.',
        'nuvs': False,
        'pathoscope': False,
        'ready': True,
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'zclark',
          'id': 'fb085f7f',
        },
        'workflows': <class 'dict'> {
          'aodp': 'none',
          'nuvs': 'none',
          'pathoscope': 'none',
        },
      },
    ],
    'found_count': 3,
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 3,
  }
---
# name: TestFindSamples.test_labels[labels1]
  <class 'dict'> {
    'documents': <class 'list'> [
      <class 'dict'> {
        'created_at': '2015-10-06T22:00:00Z',
        'host': '',
        'id': 'cb400e6d',
        'isolate': '',
        'job': None,
        'labels': <class 'list'> [
          <class 'dict'> {
            'color': '#47e7f6',
            'description': 'Drive well good explain.',
            'id': 3,
            'name': 'Off',
          },
        ],
        'library_type': 'amplicon',
        'name': '16SPP044',
        'notes': '',
        'nuvs': False,
        'pathoscope': False,
        'ready': True,
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'zclark',
          'id': 'fb085f7f',
        },
        'workflows': <class 'dict'> {
          'aodp': 'none',
          'nuvs': 'none',
          'pathoscope': 'none',
        },
      },
    ],
    'found_count': 1,
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 3,
  }
---
# name: TestFindSamples.test_labels[labels2]
  <class 'dict'> {
    'documents': <class 'list'> [
      <class 'dict'> {
        'created_at': '2015-10-06T22:00:00Z',
        'host': '',
        'id': 'cb400e6d',
        'isolate': '',
        'job': None,
        'labels': <class 'list'> [
          <class 'dict'> {
            'color': '#47e7f6',
            'description': 'Drive well good explain.',
            'id': 3,
            'name': 'Off',
          },
        ],
        'library_type': 'amplicon',
        'name': '16SPP044',
        'notes': '',
        'nuvs': False,
        'pathoscope': False,
        'ready': True,
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'zclark',
          'id': 'fb085f7f',
        },
        'workflows': <class 'dict'> {
          'aodp': 'none',
          'nuvs': 'none',
          'pathoscope': 'none',
        },
      },
      <class 'dict'> {
        'created_at': '2015-10-06T21:00:00Z',
        'host': '',
        'id': 'beb1eb10',
        'isolate': 'Thing',
        'job': None,
        'labels': <class 'list'> [
          <class 'dict'> {
            'color': '#ae686a',
            'description': 'Tonight themselves true power home price.',
            'id': 1,
            'name': 'Market',
          },
          <class 'dict'> {
            'color': '#8f837f',
            'description': 'Leader bad school.',
            'id': 2,
            'name': 'Class',
          },
        ],
        'library_type': 'normal',
        'name': '16GVP042',
        'notes': '',
        'nuvs': True,
        'pathoscope': True,
        'ready': True,
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'leeashley',
          'id': 'bf1b993c',
        },
        'workflows': <class 'dict'> {
          'aodp': 'none',
          'nuvs': 'none',
          'pathoscope': 'none',
        },
      },
    ],
    'found_count': 2,
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 3,
  }
---
# name: TestFindSamples.test_labels[labels3]
  <class 'dict'> {
    'documents': <class 'list'> [
    ],
    'found_count': 0,
    'page': 1,
    'page_count': 0,
    'per_page': 25,
    'total_count': 3,
  }
---
# name: TestFindSamples.test_page_perpage[2-1]
  <class 'dict'> {
    'documents': <class 'list'> [
      <class 'dict'> {
        'created_at': '2015-10-06T22:00:00Z',
        'host': '',
        'id': 'cb400e6d',
        'isolate': '',
        'job': None,
        'labels': <class 'list'> [
          <class 'dict'> {
            'color': '#47e7f6',
            'description': 'Drive well good explain.',
            'id': 3,
            'name': 'Off',
          },
        ],
        'library_type': 'amplicon',
        'name': '16SPP044',
        'notes': '',
        'nuvs': False,
        'pathoscope': False,
        'ready': True,
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'zclark',
          'id': 'fb085f7f',
        },
        'workflows': <class 'dict'> {
          'aodp': 'none',
          'nuvs': 'none',
          'pathoscope': 'none',
        },
      },
      <class 'dict'> {
        'created_at': '2015-10-06T21:00:00Z',
        'host': '',
        'id': 'beb1eb10',
        'isolate': 'Thing',
        'job': None,
        'labels': <class 'list'> [
          <class 'dict'> {
            'color': '#ae686a',
            'description': 'Tonight themselves true power home price.',
            'id': 1,
            'name': 'Market',
          },
          <class 'dict'> {
            'color': '#8f837f',
            'description': 'Leader bad school.',
            'id': 2,
            'name': 'Class',
          },
        ],
        'library_type': 'normal',
        'name': '16GVP042',
        'notes': '',
        'nuvs': True,
        'pathoscope': True,
        'ready': True,
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'leeashley',
          'id': 'bf1b993c',
        },
        'workflows': <class 'dict'> {
          'aodp': 'none',
          'nuvs': 'none',
          'pathoscope': 'none',
        },
      },
    ],
    'found_count': 3,
    'page': 1,
    'page_count': 2,
    'per_page': 2,
    'total_count': 3,
  }
---
# name: TestFindSamples.test_page_perpage[2-2]
  <class 'dict'> {
    'documents': <class 'list'> [
      <class 'dict'> {
        'created_at': '2015-10-06T20:00:00Z',
        'host': '',
        'id': '72bb8b31',
        'isolate': 'Test',
        'job': None,
        'labels': <class 'list'> [
          <class 'dict'> {
            'color': '#ae686a',
            'description': 'Tonight themselves true power home price.',
            'id': 1,
            'name': 'Market',
          },
        ],
        'library_type': 'srna',
        'name': '16GVP043',
        'notes': 'This is a good sample.',
        'nuvs': False,
        'pathoscope': False,
        'ready': True,
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'zclark',
          'id': 'fb085f7f',
        },
        'workflows': <class 'dict'> {
          'aodp': 'none',
          'nuvs': 'none',
          'pathoscope': 'none',
        },
      },
    ],
    'found_count': 3,
    'page': 2,
    'page_count': 2,
    'per_page': 2,
    'total_count': 3,
  }
---
# name: TestFindSamples.test_page_perpage[None-None]
  <class 'dict'> {
    'documents': <class 'list'> [
      <class 'dict'> {
        'created_at': '2015-10-06T22:00:00Z',
        'host': '',
        'id': 'cb400e6d',
        'isolate': '',
        'job': None,
        'labels': <class 'list'> [
          <class 'dict'> {
            'color': '#47e7f6',
            'description': 'Drive well good explain.',
            'id': 3,
            'name': 'Off',
          },
        ],
        'library_type': 'amplicon',
        'name': '16SPP044',
        'notes': '',
        'nuvs': False,
        'pathoscope': False,
        'ready': True,
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'zclark',
          'id': 'fb085f7f',
        },
        'workflows': <class 'dict'> {
          'aodp': 'none',
          'nuvs': 'none',
          'pathoscope': 'none',
        },
      },
      <class 'dict'> {
        'created_at': '2015-10-06T21:00:00Z',
        'host': '',
        'id': 'beb1eb10',
        'isolate': 'Thing',
        'job': None,
        'labels': <class 'list'> [
          <class 'dict'> {
            'color': '#ae686a',
            'description': 'Tonight themselves true power home price.',
            'id': 1,
            'name': 'Market',
          },
          <class 'dict'> {
            'color': '#8f837f',
            'description': 'Leader bad school.',
            'id': 2,
            'name': 'Class',
          },
        ],
        'library_type': 'normal',
        'name': '16GVP042',
        'notes': '',
        'nuvs': True,
        'pathoscope': True,
        'ready': True,
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'leeashley',
          'id': 'bf1b993c',
        },
        'workflows': <class 'dict'> {
          'aodp': 'none',
          'nuvs': 'none',
          'pathoscope': 'none',
        },
      },
      <class 'dict'> {
        'created_at': '2015-10-06T20:00:00Z',
        'host': '',
        'id': '72bb8b31',
        'isolate': 'Test',
        'job': None,
        'labels': <class 'list'> [
          <class 'dict'> {
            'color': '#ae686a',
            'description': 'Tonight themselves true power home price.',
            'id': 1,
            'name': 'Market',
          },
        ],
        'library_type': 'srna',
        'name': '16GVP043',
        'notes': 'This is a good sample.',
        'nuvs': False,
        'pathoscope': False,
        'ready': True,
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'zclark',
          'id': 'fb085f7f',
        },
        'workflows': <class 'dict'> {
          'aodp': 'none',
          'nuvs': 'none',
          'pathoscope': 'none',
        },
      },
    ],
    'found_count': 3,
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 3,
  }
---
# name: TestFindSamples.test_term[None-/samples]
  <class 'dict'> {
    'documents': <class 'list'> [
      <class 'dict'> {
        'created_at': '2015-10-06T22:00:00Z',
        'host': '',
        'id': 'cb400e6d',
        'isolate': '',
        'job': None,
        'labels': <class 'list'> [
          <class 'dict'> {
            'color': '#47e7f6',
            'description': 'Drive well good explain.',
            'id': 3,
            'name': 'Off',
          },
        ],
        'library_type': 'amplicon',
        'name': '16SPP044',
        'notes': '',
        'nuvs': False,
        'pathoscope': False,
        'ready': True,
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'zclark',
          'id': 'fb085f7f',
        },
        'workflows': <class 'dict'> {
          'aodp': 'none',
          'nuvs': 'none',
          'pathoscope': 'none',
        },
      },
      <class 'dict'> {
        'created_at': '2015-10-06T21:00:00Z',
        'host': '',
        'id': 'beb1eb10',
        'isolate': 'Thing',
        'job': None,
        'labels': <class 'list'> [
          <class 'dict'> {
            'color': '#ae686a',
            'description': 'Tonight themselves true power home price.',
            'id': 1,
            'name': 'Market',
          },
          <class 'dict'> {
            'color': '#8f837f',
            'description': 'Leader bad school.',
            'id': 2,
            'name': 'Class',
          },
        ],
        'library_type': 'normal',
        'name': '16GVP042',
        'notes': '',
        'nuvs': True,
        'pathoscope': True,
        'ready': True,
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'leeashley',
          'id': 'bf1b993c',
        },
        'workflows': <class 'dict'> {
          'aodp': 'none',
          'nuvs': 'none',
          'pathoscope': 'none',
        },
      },
      <class 'dict'> {
        'created_at': '2015-10-06T20:00:00Z',
        'host': '',
        'id': '72bb8b31',
        'isolate': 'Test',
        'job': None,
        'labels': <class 'list'> [
          <class 'dict'> {
            'color': '#ae686a',
            'description': 'Tonight themselves true power home price.',
            'id': 1,
            'name': 'Market',
          },
        ],
        'library_type': 'srna',
        'name': '16GVP043',
        'notes': 'This is a good sample.',
        'nuvs': False,
        'pathoscope': False,
        'ready': True,
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'zclark',
          'id': 'fb085f7f',
        },
        'workflows': <class 'dict'> {
          'aodp': 'none',
          'nuvs': 'none',
          'pathoscope': 'none',
        },
      },
    ],
    'found_count': 3,
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 3,
  }
---
# name: TestFindSamples.test_term[None-/spaces/0/samples]
  <class 'dict'> {
    'documents': <class 'list'> [
      <class 'dict'> {
        'created_at': '2015-10-06T22:00:00Z',
        'host': '',
        'id': 'cb400e6d',
        'isolate': '',
        'job': None,
        'labels': <class 'list'> [
          <class 'dict'> {
            'color': '#47e7f6',
            'description': 'Drive well good explain.',
            'id': 3,
            'name': 'Off',
          },
        ],
        'library_type': 'amplicon',
        'name': '16SPP044',
        'notes': '',
        'nuvs': False,
        'pathoscope': False,
        'ready': True,
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'zclark',
          'id': 'fb085f7f',
        },
        'workflows': <class 'dict'> {
          'aodp': 'none',
          'nuvs': 'none',
          'pathoscope': 'none',
        },
      },
      <class 'dict'> {
        'created_at': '2015-10-06T21:00:00Z',
        'host': '',
        'id': 'beb1eb10',
        'isolate': 'Thing',
        'job': None,
        'labels': <class 'list'> [
          <class 'dict'> {
            'color': '#ae686a',
            'description': 'Tonight themselves true power home price.',
            'id': 1,
            'name': 'Market',
          },
          <class 'dict'> {
            'color': '#8f837f',
            'description': 'Leader bad school.',
            'id': 2,
            'name': 'Class',
          },
        ],
        'library_type': 'normal',
        'name': '16GVP042',
        'notes': '',
        'nuvs': True,
        'pathoscope': True,
        'ready': True,
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'leeashley',
          'id': 'bf1b993c',
        },
        'workflows': <class 'dict'> {
          'aodp': 'none',
          'nuvs': 'none',
          'pathoscope': 'none',
        },
      },
      <class 'dict'> {
        'created_at': '2015-10-06T20:00:00Z',
        'host': '',
        'id': '72bb8b31',
        'isolate': 'Test',
        'job': None,
        'labels': <class 'list'> [
          <class 'dict'> {
            'color': '#ae686a',
            'description': 'Tonight themselves true power home price.',
            'id': 1,
            'name': 'Market',
          },
        ],
        'library_type': 'srna',
        'name': '16GVP043',
        'notes': 'This is a good sample.',
        'nuvs': False,
        'pathoscope': False,
        'ready': True,
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'zclark',
          'id': 'fb085f7f',
        },
        'workflows': <class 'dict'> {
          'aodp': 'none',
          'nuvs': 'none',
          'pathoscope': 'none',
        },
      },
    ],
    'found_count': 3,
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 3,
  }
---
# name: TestFindSamples.test_term[gv-/samples]
  <class 'dict'> {
    'documents': <class 'list'> [
      <class 'dict'> {
        'created_at': '2015-10-06T21:00:00Z',
        'host': '',
        'id': 'beb1eb10',
        'isolate': 'Thing',
        'job': None,
        'labels': <class 'list'> [
          <class 'dict'> {
            'color': '#ae686a',
            'description': 'Tonight themselves true power home price.',
            'id': 1,
            'name': 'Market',
          },
          <class 'dict'> {
            'color': '#8f837f',
            'description': 'Leader bad school.',
            'id': 2,
            'name': 'Class',
          },
        ],
        'library_type': 'normal',
        'name': '16GVP042',
        'notes': '',
        'nuvs': True,
        'pathoscope': True,
        'ready': True,
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'leeashley',
          'id': 'bf1b993c',
        },
        'workflows': <class 'dict'> {
          'aodp': 'none',
          'nuvs': 'none',
          'pathoscope': 'none',
        },
      },
      <class 'dict'> {
        'created_at': '2015-10-06T20:00:00Z',
        'host': '',
        'id': '72bb8b31',
        'isolate': 'Test',
        'job': None,
        'labels': <class 'list'> [
          <class 'dict'> {
            'color': '#ae686a',
            'description': 'Tonight themselves true power home price.',
            'id': 1,
            'name': 'Market',
          },
        ],
        'library_type': 'srna',
        'name': '16GVP043',
        'notes': 'This is a good sample.',
        'nuvs': False,
        'pathoscope': False,
        'ready': True,
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'zclark',
          'id': 'fb085f7f',
        },
        'workflows': <class 'dict'> {
          'aodp': 'none',
          'nuvs': 'none',
          'pathoscope': 'none',
        },
      },
    ],
    'found_count': 2,
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 3,
  }
---
# name: TestFindSamples.test_term[gv-/spaces/0/samples]
  <class 'dict'> {
    'documents': <class 'list'> [
      <class 'dict'> {
        'created_at': '2015-10-06T21:00:00Z',
        'host': '',
        'id': 'beb1eb10',
        'isolate': 'Thing',
        'job': None,
        'labels': <class 'list'> [
          <class 'dict'> {
            'color': '#ae686a',
            'description': 'Tonight themselves true power home price.',
            'id': 1,
            'name': 'Market',
          },
          <class 'dict'> {
            'color': '#8f837f',
            'description': 'Leader bad school.',
            'id': 2,
            'name': 'Class',
          },
        ],
        'library_type': 'normal',
        'name': '16GVP042',
        'notes': '',
        'nuvs': True,
        'pathoscope': True,
        'ready': True,
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'leeashley',
          'id': 'bf1b993c',
        },
        'workflows': <class 'dict'> {
          'aodp': 'none',
          'nuvs': 'none',
          'pathoscope': 'none',
        },
      },
      <class 'dict'> {
        'created_at': '2015-10-06T20:00:00Z',
        'host': '',
        'id': '72bb8b31',
        'isolate': 'Test',
        'job': None,
        'labels': <class 'list'> [
          <class 'dict'> {
            'color': '#ae686a',
            'description': 'Tonight themselves true power home price.',
            'id': 1,
            'name': 'Market',
          },
        ],
        'library_type': 'srna',
        'name': '16GVP043',
        'notes': 'This is a good sample.',
        'nuvs': False,
        'pathoscope': False,
        'ready': True,
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'zclark',
          'id': 'fb085f7f',
        },
        'workflows': <class 'dict'> {
          'aodp': 'none',
          'nuvs': 'none',
          'pathoscope': 'none',
        },
      },
    ],
    'found_count': 2,
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 3,
  }
---
# name: TestFindSamples.test_term[sp-/samples]
  <class 'dict'> {
    'documents': <class 'list'> [
      <class 'dict'> {
        'created_at': '2015-10-06T22:00:00Z',
        'host': '',
        'id': 'cb400e6d',
        'isolate': '',
        'job': None,
        'labels': <class 'list'> [
          <class 'dict'> {
            'color': '#47e7f6',
            'description': 'Drive well good explain.',
            'id': 3,
            'name': 'Off',
          },
        ],
        'library_type': 'amplicon',
        'name': '16SPP044',
        'notes': '',
        'nuvs': False,
        'pathoscope': False,
        'ready': True,
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'zclark',
          'id': 'fb085f7f',
        },
        'workflows': <class 'dict'> {
          'aodp': 'none',
          'nuvs': 'none',
          'pathoscope': 'none',
        },
      },
    ],
    'found_count': 1,
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 3,
  }
---
# name: TestFindSamples.test_term[sp-/spaces/0/samples]
  <class 'dict'> {
    'documents': <class 'list'> [
      <class 'dict'> {
        'created_at': '2015-10-06T22:00:00Z',
        'host': '',
        'id': 'cb400e6d',
        'isolate': '',
        'job': None,
        'labels': <class 'list'> [
          <class 'dict'> {
            'color': '#47e7f6',
            'description': 'Drive well good explain.',
            'id': 3,
            'name': 'Off',
          },
        ],
        'library_type': 'amplicon',
        'name': '16SPP044',
        'notes': '',
        'nuvs': False,
        'pathoscope': False,
        'ready': True,
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'zclark',
          'id': 'fb085f7f',
        },
        'workflows': <class 'dict'> {
          'aodp': 'none',
          'nuvs': 'none',
          'pathoscope': 'none',
        },
      },
    ],
    'found_count': 1,
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 3,
  }
---
# name: TestFindSamples.test_workflows[None]
  <class 'dict'> {
    'documents': <class 'list'> [
      <class 'dict'> {
        'created_at': '2015-10-06T22:00:00Z',
        'host': '',
        'id': 'cb400e6d',
        'isolate': '',
        'job': None,
        'labels': <class 'list'> [
          <class 'dict'> {
            'color': '#47e7f6',
            'description': 'Drive well good explain.',
            'id': 3,
            'name': 'Off',
          },
        ],
        'library_type': 'amplicon',
        'name': '16SPP044',
        'notes': '',
        'nuvs': False,
        'pathoscope': False,
        'ready': True,
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'zclark',
          'id': 'fb085f7f',
        },
        'workflows': <class 'dict'> {
          'aodp': 'none',
          'nuvs': 'none',
          'pathoscope': 'none',
        },
      },
      <class 'dict'> {
        'created_at': '2015-10-06T21:00:00Z',
        'host': '',
        'id': 'beb1eb10',
        'isolate': 'Thing',
        'job': None,
        'labels': <class 'list'> [
          <class 'dict'> {
            'color': '#ae686a',
            'description': 'Tonight themselves true power home price.',
            'id': 1,
            'name': 'Market',
          },
          <class 'dict'> {
            'color': '#8f837f',
            'description': 'Leader bad school.',
            'id': 2,
            'name': 'Class',
          },
        ],
        'library_type': 'normal',
        'name': '16GVP042',
        'notes': '',
        'nuvs': True,
        'pathoscope': True,
        'ready': True,
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'leeashley',
          'id': 'bf1b993c',
        },
        'workflows': <class 'dict'> {
          'aodp': 'none',
          'nuvs': 'none',
          'pathoscope': 'none',
        },
      },
      <class 'dict'> {
        'created_at': '2015-10-06T20:00:00Z',
        'host': '',
        'id': '72bb8b31',
        'isolate': 'Test',
        'job': None,
        'labels': <class 'list'> [
          <class 'dict'> {
            'color': '#ae686a',
            'description': 'Tonight themselves true power home price.',
            'id': 1,
            'name': 'Market',
          },
        ],
        'library_type': 'srna',
        'name': '16GVP043',
        'notes': 'This is a good sample.',
        'nuvs': False,
        'pathoscope': False,
        'ready': True,
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'zclark',
          'id': 'fb085f7f',
        },
        'workflows': <class 'dict'> {
          'aodp': 'none',
          'nuvs': 'none',
          'pathoscope': 'none',
        },
      },
    ],
    'found_count': 3,
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 3,
  }
---
# name: TestFindSamples.test_workflows[workflows1]
  <class 'dict'> {
    'documents': <class 'list'> [
      <class 'dict'> {
        'created_at': '2015-10-06T21:00:00Z',
        'host': '',
        'id': 'beb1eb10',
        'isolate': 'Thing',
        'job': None,
        'labels': <class 'list'> [
          <class 'dict'> {
            'color': '#ae686a',
            'description': 'Tonight themselves true power home price.',
            'id': 1,
            'name': 'Market',
          },
          <class 'dict'> {
            'color': '#8f837f',
            'description': 'Leader bad school.',
            'id': 2,
            'name': 'Class',
          },
        ],
        'library_type': 'normal',
        'name': '16GVP042',
        'notes': '',
        'nuvs': True,
        'pathoscope': True,
        'ready': True,
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'leeashley',
          'id': 'bf1b993c',
        },
        'workflows': <class 'dict'> {
          'aodp': 'none',
          'nuvs': 'none',
          'pathoscope': 'none',
        },
      },
    ],
    'found_count': 1,
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 3,
  }
---
# name: TestFindSamples.test_workflows[workflows2]
  <class 'dict'> {
    'documents': <class 'list'> [
      <class 'dict'> {
        'created_at': '2015-10-06T22:00:00Z',
        'host': '',
        'id': 'cb400e6d',
        'isolate': '',
        'job': None,
        'labels': <class 'list'> [
          <class 'dict'> {
            'color': '#47e7f6',
            'description': 'Drive well good explain.',
            'id': 3,
            'name': 'Off',
          },
        ],
        'library_type': 'amplicon',
        'name': '16SPP044',
        'notes': '',
        'nuvs': False,
        'pathoscope': False,
        'ready': True,
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'zclark',
          'id': 'fb085f7f',
        },
        'workflows': <class 'dict'> {
          'aodp': 'none',
          'nuvs': 'none',
          'pathoscope': 'none',
        },
      },
      <class 'dict'> {
        'created_at': '2015-10-06T21:00:00Z',
        'host': '',
        'id': 'beb1eb10',
        'isolate': 'Thing',
        'job': None,
        'labels': <class 'list'> [
          <class 'dict'> {
            'color': '#ae686a',
            'description': 'Tonight themselves true power home price.',
            'id': 1,
            'name': 'Market',
          },
          <class 'dict'> {
            'color': '#8f837f',
            'description': 'Leader bad school.',
            'id': 2,
            'name': 'Class',
          },
        ],
        'library_type': 'normal',
        'name': '16GVP042',
        'notes': '',
        'nuvs': True,
        'pathoscope': True,
        'ready': True,
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'leeashley',
          'id': 'bf1b993c',
        },
        'workflows': <class 'dict'> {
          'aodp': 'none',
          'nuvs': 'none',
          'pathoscope': 'none',
        },
      },
      <class 'dict'> {
        'created_at': '2015-10-06T20:00:00Z',
        'host': '',
        'id': '72bb8b31',
        'isolate': 'Test',
        'job': None,
        'labels': <class 'list'> [
          <class 'dict'> {
            'color': '#ae686a',
            'description': 'Tonight themselves true power home price.',
            'id': 1,
            'name': 'Market',
          },
        ],
        'library_type': 'srna',
        'name': '16GVP043',
        'notes': 'This is a good sample.',
        'nuvs': False,
        'pathoscope': False,
        'ready': True,
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'zclark',
          'id': 'fb085f7f',
        },
        'workflows': <class 'dict'> {
          'aodp': 'none',
          'nuvs': 'none',
          'pathoscope': 'none',
        },
      },
    ],
    'found_count': 3,
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 3,
  }
---
# name: TestFindSamples.test_workflows[workflows3]
  <class 'dict'> {
    'documents': <class 'list'> [
      <class 'dict'> {
        'created_at': '2015-10-06T22:00:00Z',
        'host': '',
        'id': 'cb400e6d',
        'isolate': '',
        'job': None,
        'labels': <class 'list'> [
          <class 'dict'> {
            'color': '#47e7f6',
            'description': 'Drive well good explain.',
            'id': 3,
            'name': 'Off',
          },
        ],
        'library_type': 'amplicon',
        'name': '16SPP044',
        'notes': '',
        'nuvs': False,
        'pathoscope': False,
        'ready': True,
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'zclark',
          'id': 'fb085f7f',
        },
        'workflows': <class 'dict'> {
          'aodp': 'none',
          'nuvs': 'none',
          'pathoscope': 'none',
        },
      },
      <class 'dict'> {
        'created_at': '2015-10-06T20:00:00Z',
        'host': '',
        'id': '72bb8b31',
        'isolate': 'Test',
        'job': None,
        'labels': <class 'list'> [
          <class 'dict'> {
            'color': '#ae686a',
            'description': 'Tonight themselves true power home price.',
            'id': 1,
            'name': 'Market',
          },
        ],
        'library_type': 'srna',
        'name': '16GVP043',
        'notes': 'This is a good sample.',
        'nuvs': False,
        'pathoscope': False,
        'ready': True,
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'zclark',
          'id': 'fb085f7f',
        },
        'workflows': <class 'dict'> {
          'aodp': 'none',
          'nuvs': 'none',
          'pathoscope': 'none',
        },
      },
    ],
    'found_count': 2,
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 3,
  }
---
# name: TestGet.test_administrator[resp]
  <class 'dict'> {
    'all_read': True,
    'all_write': True,
    'artifacts': <class 'list'> [
      <class 'dict'> {
        'download_url': '/samples/test/artifacts/reference.fa.gz',
        'id': 1,
        'name': 'reference.fa.gz',
        'name_on_disk': 'reference.fa.gz',
        'sample': 'test',
        'size': None,
        'type': 'fasta',
        'uploaded_at': None,
      },
    ],
    'caches': <class 'list'> [
    ],
    'created_at': '2015-10-06T20:00:00Z',
    'format': 'fastq',
    'group': 'none',
    'group_read': True,
    'group_write': True,
    'hold': False,
    'host': '',
    'id': 'test',
    'is_legacy': False,
    'isolate': '',
    'job': None,
    'labels': <class 'list'> [
      <class 'dict'> {
        'color': '#629f70',
        'description': 'American whole magazine truth stop whose.',
        'id': 1,
        'name': 'Three',
      },
    ],
    'library_type': 'normal',
    'locale': '',
    'name': 'Test',
    'notes': '',
    'nuvs': False,
    'paired': False,
    'pathoscope': True,
    'quality': None,
    'reads': <class 'list'> [
      <class 'dict'> {
        'download_url': '/samples/test/reads/reads_1.fq.gz',
        'id': 1,
        'name': 'reads_1.fq.gz',
        'name_on_disk': 'reads_1.fq.gz',
        'sample': 'test',
        'size': 2903109210,
        'upload': None,
        'uploaded_at': '2015-10-06T20:00:00Z',
      },
    ],
    'ready': True,
    'subtractions': <class 'list'> [
      <class 'dict'> {
        'id': 'apple',
        'name': 'Apple',
      },
      <class 'dict'> {
        'id': 'pear',
        'name': 'Pear',
      },
    ],
    'user': <class 'dict'> {
      'administrator': False,
      'handle': 'kellylopez',
      'id': 'bf1b993c',
    },
    'workflows': <class 'dict'> {
      'aodp': 'incompatible',
      'nuvs': 'pending',
      'pathoscope': 'complete',
    },
  }
---
# name: TestGet.test_all_read[resp]
  <class 'dict'> {
    'all_read': True,
    'all_write': True,
    'artifacts': <class 'list'> [
      <class 'dict'> {
        'download_url': '/samples/test/artifacts/reference.fa.gz',
        'id': 1,
        'name': 'reference.fa.gz',
        'name_on_disk': 'reference.fa.gz',
        'sample': 'test',
        'size': None,
        'type': 'fasta',
        'uploaded_at': None,
      },
    ],
    'caches': <class 'list'> [
    ],
    'created_at': '2015-10-06T20:00:00Z',
    'format': 'fastq',
    'group': 'none',
    'group_read': False,
    'group_write': True,
    'hold': False,
    'host': '',
    'id': 'test',
    'is_legacy': False,
    'isolate': '',
    'job': None,
    'labels': <class 'list'> [
      <class 'dict'> {
        'color': '#629f70',
        'description': 'American whole magazine truth stop whose.',
        'id': 1,
        'name': 'Three',
      },
    ],
    'library_type': 'normal',
    'locale': '',
    'name': 'Test',
    'notes': '',
    'nuvs': False,
    'paired': False,
    'pathoscope': True,
    'quality': None,
    'reads': <class 'list'> [
      <class 'dict'> {
        'download_url': '/samples/test/reads/reads_1.fq.gz',
        'id': 1,
        'name': 'reads_1.fq.gz',
        'name_on_disk': 'reads_1.fq.gz',
        'sample': 'test',
        'size': 2903109210,
        'upload': None,
        'uploaded_at': '2015-10-06T20:00:00Z',
      },
    ],
    'ready': True,
    'subtractions': <class 'list'> [
      <class 'dict'> {
        'id': 'apple',
        'name': 'Apple',
      },
      <class 'dict'> {
        'id': 'pear',
        'name': 'Pear',
      },
    ],
    'user': <class 'dict'> {
      'administrator': False,
      'handle': 'tammybrown',
      'id': '7cf872dc',
    },
    'workflows': <class 'dict'> {
      'aodp': 'incompatible',
      'nuvs': 'pending',
      'pathoscope': 'complete',
    },
  }
---
# name: TestGet.test_group_read[False][resp]
  <class 'dict'> {
    'id': 'insufficient_rights',
    'message': 'Insufficient rights',
  }
---
# name: TestGet.test_group_read[True][resp]
  <class 'dict'> {
    'all_read': False,
    'all_write': False,
    'artifacts': <class 'list'> [
      <class 'dict'> {
        'download_url': '/samples/test/artifacts/reference.fa.gz',
        'id': 1,
        'name': 'reference.fa.gz',
        'name_on_disk': 'reference.fa.gz',
        'sample': 'test',
        'size': None,
        'type': 'fasta',
        'uploaded_at': None,
      },
    ],
    'caches': <class 'list'> [
    ],
    'created_at': '2015-10-06T20:00:00Z',
    'format': 'fastq',
    'group': '7cf872dc',
    'group_read': True,
    'group_write': True,
    'hold': False,
    'host': '',
    'id': 'test',
    'is_legacy': False,
    'isolate': '',
    'job': None,
    'labels': <class 'list'> [
      <class 'dict'> {
        'color': '#629f70',
        'description': 'American whole magazine truth stop whose.',
        'id': 1,
        'name': 'Three',
      },
    ],
    'library_type': 'normal',
    'locale': '',
    'name': 'Test',
    'notes': '',
    'nuvs': False,
    'paired': False,
    'pathoscope': True,
    'quality': None,
    'reads': <class 'list'> [
      <class 'dict'> {
        'download_url': '/samples/test/reads/reads_1.fq.gz',
        'id': 1,
        'name': 'reads_1.fq.gz',
        'name_on_disk': 'reads_1.fq.gz',
        'sample': 'test',
        'size': 2903109210,
        'upload': None,
        'uploaded_at': '2015-10-06T20:00:00Z',
      },
    ],
    'ready': True,
    'subtractions': <class 'list'> [
      <class 'dict'> {
        'id': 'apple',
        'name': 'Apple',
      },
      <class 'dict'> {
        'id': 'pear',
        'name': 'Pear',
      },
    ],
    'user': <class 'dict'> {
      'administrator': False,
      'handle': 'qtaylor',
      'id': '3cbb22cc',
    },
    'workflows': <class 'dict'> {
      'aodp': 'incompatible',
      'nuvs': 'pending',
      'pathoscope': 'complete',
    },
  }
---
# name: TestGet.test_owner[resp]
  <class 'dict'> {
    'all_read': False,
    'all_write': True,
    'artifacts': <class 'list'> [
      <class 'dict'> {
        'download_url': '/samples/test/artifacts/reference.fa.gz',
        'id': 1,
        'name': 'reference.fa.gz',
        'name_on_disk': 'reference.fa.gz',
        'sample': 'test',
        'size': None,
        'type': 'fasta',
        'uploaded_at': None,
      },
    ],
    'caches': <class 'list'> [
    ],
    'created_at': '2015-10-06T20:00:00Z',
    'format': 'fastq',
    'group': 'none',
    'group_read': False,
    'group_write': True,
    'hold': False,
    'host': '',
    'id': 'test',
    'is_legacy': False,
    'isolate': '',
    'job': None,
    'labels': <class 'list'> [
      <class 'dict'> {
        'color': '#629f70',
        'description': 'American whole magazine truth stop whose.',
        'id': 1,
        'name': 'Three',
      },
    ],
    'library_type': 'normal',
    'locale': '',
    'name': 'Test',
    'notes': '',
    'nuvs': False,
    'paired': False,
    'pathoscope': True,
    'quality': None,
    'reads': <class 'list'> [
      <class 'dict'> {
        'download_url': '/samples/test/reads/reads_1.fq.gz',
        'id': 1,
        'name': 'reads_1.fq.gz',
        'name_on_disk': 'reads_1.fq.gz',
        'sample': 'test',
        'size': 2903109210,
        'upload': None,
        'uploaded_at': '2015-10-06T20:00:00Z',
      },
    ],
    'ready': True,
    'subtractions': <class 'list'> [
      <class 'dict'> {
        'id': 'apple',
        'name': 'Apple',
      },
      <class 'dict'> {
        'id': 'pear',
        'name': 'Pear',
      },
    ],
    'user': <class 'dict'> {
      'administrator': False,
      'handle': 'bob',
      'id': 'fb085f7f',
    },
    'workflows': <class 'dict'> {
      'aodp': 'incompatible',
      'nuvs': 'pending',
      'pathoscope': 'complete',
    },
  }
---
# name: TestUploadReads.test[409]
  <class 'dict'> {
    'id': 'conflict',
    'message': 'Reads file name is already uploaded for this sample',
  }
---
# name: TestUploadReads.test_uncompressed
  <class 'dict'> {
    'id': 'bad_request',
    'message': 'File is not compressed',
  }
---
# name: test_analyze[None]
  <class 'dict'> {
    'created_at': '2015-10-06T20:00:00Z',
    'files': <class 'list'> [
    ],
    'id': 'bf1b993c',
    'index': <class 'dict'> {
      'id': 'test',
      'version': 4,
    },
    'job': <class 'dict'> {
      'archived': False,
      'created_at': '2015-10-06T20:00:00Z',
      'id': 'fb085f7f',
      'progress': 0,
      'stage': None,
      'state': 'waiting',
      'user': <class 'dict'> {
        'administrator': False,
        'handle': 'bob',
        'id': 'bf1b993c',
      },
      'workflow': 'pathoscope_bowtie',
    },
    'ready': False,
    'reference': <class 'dict'> {
      'data_type': 'genome',
      'id': 'test_ref',
      'name': 'Test Reference',
    },
    'results': None,
    'sample': <class 'dict'> {
      'id': 'test',
    },
    'subtractions': <class 'list'> [
      <class 'dict'> {
        'id': 'subtraction_1',
        'name': 'Subtraction 1',
      },
    ],
    'updated_at': '2015-10-06T20:00:00Z',
    'user': <class 'dict'> {
      'administrator': False,
      'handle': 'bob',
      'id': 'bf1b993c',
    },
    'workflow': 'pathoscope_bowtie',
  }
---
# name: test_finalize[quality]
  <class 'dict'> {
    'all_read': True,
    'all_write': True,
    'artifacts': <class 'list'> [
      <class 'dict'> {
        'download_url': '/samples/test/artifacts/reference.fa.gz',
        'id': 1,
        'name': 'reference.fa.gz',
        'name_on_disk': 'reference.fa.gz',
        'sample': 'test',
        'size': None,
        'type': 'fasta',
        'uploaded_at': None,
      },
    ],
    'caches': <class 'list'> [
    ],
    'created_at': '1970-01-01T00:00:13Z',
    'format': 'fastq',
    'group': 'none',
    'group_read': True,
    'group_write': True,
    'hold': False,
    'host': '',
    'id': 'test',
    'is_legacy': False,
    'isolate': '',
    'job': None,
    'labels': <class 'list'> [
      <class 'dict'> {
        'color': '#629f70',
        'description': 'American whole magazine truth stop whose.',
        'id': 1,
        'name': 'Three',
      },
    ],
    'library_type': 'normal',
    'locale': '',
    'name': 'Test',
    'notes': '',
    'nuvs': False,
    'paired': False,
    'pathoscope': True,
    'quality': <class 'dict'> {
      'bases': <class 'list'> [
        <class 'list'> [
          1543,
        ],
      ],
      'composition': <class 'list'> [
        <class 'list'> [
          6372,
        ],
      ],
      'count': 7069,
      'encoding': 'OuBQPPuwYimrxkNpPWUx',
      'gc': 34222440,
      'length': <class 'list'> [
        3237,
      ],
      'sequences': <class 'list'> [
        7091,
      ],
    },
    'reads': <class 'list'> [
      <class 'dict'> {
        'download_url': '/samples/test/reads/reads_1.fq.gz',
        'id': 1,
        'name': 'reads_1.fq.gz',
        'name_on_disk': 'reads_1.fq.gz',
        'sample': 'test',
        'size': 12,
        'upload': None,
        'uploaded_at': '2023-09-01T01:01:00Z',
      },
    ],
    'ready': True,
    'subtractions': <class 'list'> [
    ],
    'user': <class 'dict'> {
      'administrator': False,
      'handle': 'kellylopez',
      'id': 'bf1b993c',
    },
    'workflows': <class 'dict'> {
      'aodp': 'incompatible',
      'nuvs': 'pending',
      'pathoscope': 'complete',
    },
  }
---
# name: test_find_analyses[Baz-None]
  <class 'dict'> {
    'documents': <class 'list'> [
      <class 'dict'> {
        'created_at': '2015-10-06T20:00:00Z',
        'id': 'test_1',
        'index': <class 'dict'> {
          'id': 'foo',
          'version': 2,
        },
        'job': <class 'dict'> {
          'id': '3cbb22cc',
        },
        'ready': True,
        'reference': <class 'dict'> {
          'id': 'baz',
          'name': 'Baz',
        },
        'sample': <class 'dict'> {
          'id': 'test',
        },
        'subtractions': <class 'list'> [
        ],
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'leeashley',
          'id': 'fb085f7f',
        },
        'workflow': 'pathoscope_bowtie',
      },
      <class 'dict'> {
        'created_at': '2015-10-06T20:00:00Z',
        'id': 'test_2',
        'index': <class 'dict'> {
          'id': 'foo',
          'version': 2,
        },
        'job': <class 'dict'> {
          'id': 'foo',
        },
        'ready': True,
        'reference': <class 'dict'> {
          'id': 'baz',
          'name': 'Baz',
        },
        'sample': <class 'dict'> {
          'id': 'test',
        },
        'subtractions': <class 'list'> [
          <class 'dict'> {
            'id': 'foo',
            'name': 'Malus domestica',
          },
        ],
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'leeashley',
          'id': 'fb085f7f',
        },
        'workflow': 'pathoscope_bowtie',
      },
    ],
    'found_count': 2,
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 3,
  }
---
# name: test_find_analyses[None-None]
  <class 'dict'> {
    'documents': <class 'list'> [
      <class 'dict'> {
        'created_at': '2015-10-06T20:00:00Z',
        'id': 'test_1',
        'index': <class 'dict'> {
          'id': 'foo',
          'version': 2,
        },
        'job': <class 'dict'> {
          'id': '3cbb22cc',
        },
        'ready': True,
        'reference': <class 'dict'> {
          'id': 'baz',
          'name': 'Baz',
        },
        'sample': <class 'dict'> {
          'id': 'test',
        },
        'subtractions': <class 'list'> [
        ],
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'leeashley',
          'id': 'fb085f7f',
        },
        'workflow': 'pathoscope_bowtie',
      },
      <class 'dict'> {
        'created_at': '2015-10-06T20:00:00Z',
        'id': 'test_2',
        'index': <class 'dict'> {
          'id': 'foo',
          'version': 2,
        },
        'job': <class 'dict'> {
          'id': 'foo',
        },
        'ready': True,
        'reference': <class 'dict'> {
          'id': 'baz',
          'name': 'Baz',
        },
        'sample': <class 'dict'> {
          'id': 'test',
        },
        'subtractions': <class 'list'> [
          <class 'dict'> {
            'id': 'foo',
            'name': 'Malus domestica',
          },
        ],
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'leeashley',
          'id': 'fb085f7f',
        },
        'workflow': 'pathoscope_bowtie',
      },
      <class 'dict'> {
        'created_at': '2015-10-06T20:00:00Z',
        'id': 'test_3',
        'index': <class 'dict'> {
          'id': 'foo',
          'version': 2,
        },
        'job': None,
        'ready': True,
        'reference': <class 'dict'> {
          'id': 'foo',
          'name': 'Foo',
        },
        'sample': <class 'dict'> {
          'id': 'test',
        },
        'subtractions': <class 'list'> [
          <class 'dict'> {
            'id': 'foo',
            'name': 'Malus domestica',
          },
        ],
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'zclark',
          'id': '7cf872dc',
        },
        'workflow': 'pathoscope_bowtie',
      },
    ],
    'found_count': 3,
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 3,
  }
---
# name: test_get_cache[None]
  <class 'dict'> {
    'id': 'bar',
    'key': 'abc123',
    'program': 'skewer-0.2.2',
    'sample': <class 'dict'> {
      'id': 'foo',
    },
  }
---
# name: test_upload_artifact[None]
  <class 'dict'> {
    'id': 1,
    'name': 'small.fq',
    'name_on_disk': 'small.fq',
    'sample': 'test',
    'size': 3130756,
    'type': 'fastq',
    'uploaded_at': '2015-10-06T20:00:00Z',
  }
---
